--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"postcss": "^8.4.33",
 		"sass": "^1.69.7",
 		"sharp": "^0.33.1",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^4.2.10",
 		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.4.1",
 		"thumbhash": "^0.1.1",
